--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "googleapis": "^100.0.0",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
+    "midtrans-client": "^1.3.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
