--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx node ./src/index.js",
-    "dev": "npx nodemon ./src/index.js"
+    "start": "npx node ./index.js",
+    "dev": "npx nodemon ./index.js"
   },
   "author": "",
   "license": "ISC",
