fix booking model

--- a/.env
+++ b/.env
@@ -10,16 +10,16 @@ REDIS_PORT=18585
 REDIS_PASSWORD=PwHhOGIzfF5emHFNJvYwqeAKo3kyhaVA
 
 CLOUDINARY_NAME=dusoicuhh
-CLOUDINARY_API_KEY=449481672742389
+CLOUDINARY_API_KEY=44481672742389
 CLOUDINARY_API_SECRET=w5pjesu1v-NczD9tltWJJ1LcmSs
 
 MAIL_CLIENT_ID=200323727619-jht8jl3gogg9s258hotojf286om6fb87.apps.googleusercontent.com
 MAIL_CLIENT_SECRET=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
-MAIL_REFRESH_TOKEN=1//04KNCh9pR4zVsCgYIARAAGAQSNwF-L9IrYVykOnObkCot1J_nan8EZmVXg5Qg3f_yebNcXTpMTn4BjVoD9WLrGSvB0uPYhwtqmjg
+MAIL_REFRESH_TOKEN=1//04qUfaDQ1D8zvCgYIARAAGAQSNwF-L9IrosBJjtFpNi-3m8Sp7QCsYdMvP5oOI16ZcrnRtcuePMpwnsM4UvJfdNVzlxqSXR8y6p0
 
-MIDTRANS_PRODUCTION=G243804199
+MIDTRANS_PRODUCTION=false
 MIDTRANS_SERVER_KEY=SB-Mid-server-7wvqg2LOwjmyBjXKpUwbtawO
 MIDTRANS_CLIENT_KEY=SB-Mid-client-ZfXjkI1fSYVo3ZHX
 
-URL=https://nontonyuk.deta.dev
-# URL=127.0.0.1:3001
+# URL=https://nontonyuk.cyclic.app
+URL=127.0.0.1:3001
